# prm

./: .gitignore  CLAUDE.md  README.md  build.sbt
prm-rust/: CLAUDE.md  Cargo.toml
prm-rust/src/: error.rs  lib.rs  main.rs  validation.rs
prm-rust/src/ai/: llm_service.rs
prm-rust/src/cli/: ai_log_command.rs  label_commands.rs  mod.rs  voice_log_command.rs
prm-rust/src/db/: circle_repo.rs  mod.rs  person_repo.rs  relationship_repo.rs  schema.rs
prm-rust/src/migrate/: mod.rs
prm-rust/src/model/: interaction.rs
prm-rust/src/ops/: circle_ops.rs  contact_ops.rs  interaction_ops.rs  person_ops.rs
prm-rust/src/queries/: circle_queries.rs  contact_queries.rs  stats_queries.rs
prm-rust/tests/: queries_tests.rs
src/ai/: llm_service.rs  mod.rs  whisper_service.rs
src/cli/: ai_log_command.rs  circle_commands.rs  context.rs  interaction_commands.rs  label_commands.rs  mod.rs  person_commands.rs  voice_log_command.rs
src/db/: contact_repo.rs  correction_repo.rs  interaction_repo.rs  mod.rs  network_repo.rs  schema.rs
src/main/scala/network/: AILogCommand.scala  CLI.scala  CircleCommands.scala  InteractionCommands.scala  JsonCodecs.scala  LLMService.scala  LabelCommands.scala  Model.scala  NetworkOps.scala  NetworkQueries.scala  PersonCommands.scala  (+1 more)
src/model/: circle.rs  ids.rs  mod.rs  person.rs  relationship.rs  user.rs
src/ops/: label_ops.rs  mod.rs  relationship_ops.rs
src/queries/: interaction_queries.rs  mod.rs  person_queries.rs  relationship_queries.rs  reminder_queries.rs  stats_queries.rs
tests/: db_tests.rs  model_tests.rs  ops_tests.rs
(+4 files in other folders)
