[package]
name = "prm"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
ureq = { version = "2", features = ["json"] }
hound = "3"
whisper-rs = "0.11"

[dev-dependencies]
